adds user story 2 and part of 3

--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <%= @average_age %>
     <% @astronauts.each do |a| %>
       <p><%= a.name %></p>
       <p><%= a.age %></p>
